# pysupersql

./: .gitignore  .supersql  404.html  CONTRIBUTION.md  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  changelog.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  router.py  sitemap.xml
commit/: index.html
connecting/: index.html
database/: index.html
ddl/create/: index.html
docs/: connecting.md  custom.css  database.md  ddl.md  examples.md  filter.md  index.md  installation.md  joins.md  query.md  results.md  schema.md  tables.md  vendor-dependencies.md
docs/ddl/: create.md
docs/examples/: between.md  cast.md  concat-alias.md  connecting.md  cursor.md  delete.md  enum.md  excepts.md  function.md  group-by.md  in-select.md  insert.md  join.md  null.md  query.md  results.md  select.md  unary.md  union.md  update.md  where.md  with-recursive.md  with.md  without-query.md
dql/select/: index.html
examples/: __init__.py  between.py  cast.py  concat_alias.py  connecting.py  excepts.py  fetch.py  function.py  group_by.py  index.html  inselect.py  insert.py  join.py  null.py  query.py  sample.py  select.py  unary.py  union.py  update.py  where.py  with_recursive.py
examples/between/: index.html
examples/cast/: index.html
examples/concat-alias/: index.html
examples/connecting/: index.html
examples/cursor/: index.html
examples/data/: cyberweek_competitive_data_raw.py  cyberweek_sskuformat_competitive_data_raw.py
examples/delete/: index.html
examples/enum/: index.html
examples/excepts/: index.html
examples/fetch/: index.html
examples/function/: index.html
examples/group-by/: index.html
examples/in-select/: index.html
examples/insert/: index.html
examples/join/: index.html
examples/null/: index.html
examples/query/: index.html
examples/results/: index.html
examples/select/: index.html
examples/sql/: concatenation.psql  concatenation.sql
examples/tables/: actor.py  customer.py  employee.py  film.py  payment.py  rental.py  staff.py
examples/unary/: index.html
examples/union/: index.html
examples/update/: index.html
examples/upsert/: index.html
examples/where/: index.html
examples/with/: index.html
examples/with-recursive/: index.html
examples/without-query/: index.html
extensions/: index.html
filter/: index.html
joins/: index.html
postgres/functions/: index.html
query/: index.html
results/: index.html
search/: search_index.json
select/: index.html
supersql/: __init__.py
supersql/connection/: __init__.py  connection.py  postgres.py  sqlite.py
supersql/constants/: __init__.py  datatype_parameters.py  pg.py  sql.py
supersql/core/: __init__.py  compiler.py  database.py  functions.py  net.py  query.py  query_test.py  result.py  results.py  row.py  schema.py  state.py  table.py  table_test.py  tabledata.py  window.py
supersql/datatypes/: __init__.py  _pg.py  base.py  boolean.py  field.py  (+10 more)
tables/: index.html
tests/: ov.py
(+57 files in other folders)
