[tool.poetry]
name = "supersql"
version = "2026.2.5"
description = "Thin wrapper on top of SQL that enables you write SQL code in python easily"
authors = ["Raymond Ortserga <codesage@live.com>"]
license = "MIT"

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["SQL", "Database", "Python"]
repository = "https://github.com/rayattack/supersql"

readme = 'README.md'
documentation = "https://rayattack.github.io/supersql"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
supersql = 'supersql:main'

[tool.poetry.extras]
mysql = ["aiomysql"]
postgres = ["asyncpg"]
postgresql = ["asyncpg"]  # alias for postgres
sqlite = ["aiosqlite"]
mssql = ["aioodbc", "pyodbc"]
sqlserver = ["aioodbc", "pyodbc"]  # alias for mssql
oracle = ["cx_Oracle"]
oracledb = ["oracledb"]  # modern oracle driver
mariadb = ["aiomysql"]  # uses same driver as mysql
athena = ["PyAthena"]
presto = ["presto-python-client"]
